<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/info_title"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_MadeBy"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_wesley"
            android:textSize="16sp"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_jelle"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_margin="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_project"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_more"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_wesleySite"
            android:textSize="16sp"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_jelleSite"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>